# Animation-Header

./: .gitignore  Animation.cpp  Animation.h  CMakeLists.txt  Image.cpp  Image.h  Makefile  README.md  Test.cpp  animBasic.cpp  animBasic.h
Animation/: Animation.cpp  Animation.h  Basic.h
AnimationEditor/: CMakeLists.txt  editscene.cpp  editscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  nodeport.cpp  nodeport.h  nodesettingsdialog.cpp  nodesettingsdialog.h  nodesettingsdialog.ui  processor.cpp  processor.h  processorfactory.cpp  processorfactory.h  settable.cpp  settable.h
FFmpegEntity/Basic/: Basic.h  Color.cpp  Color.h  Formats.cpp  Formats.h  Frame.cpp  Frame.h  Packet.cpp  Packet.h
FFmpegEntity/Codec/: AudioEncoder.cpp  AudioEncoder.h  Codec.cpp  Codec.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  VideoEncoder.cpp  VideoEncoder.h
FFmpegEntity/Format/: AVFormat.cpp  AVFormat.h  AVInput.cpp  AVInput.h  AVOutput.cpp  AVOutput.h  Format.cpp  Format.h
FFmpegEntity/Frame/: Frame.h
ffmpegEntity/: CMakeLists.txt  Codec.h  Color.cpp  Color.h  Format.h  Frame.cpp  Frame.h
tools/: beats.cpp  output.txt  printTextToPixel.cpp
